correct z-index

--- a/styles/bubble.css
+++ b/styles/bubble.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: -3;
+    z-index: -2;
     overflow: hidden;
     top: 0;
     bottom: 0;
