--- a/styles/memo.css
+++ b/styles/memo.css
@@ -32,7 +32,7 @@ body {
     position: absolute;
     left: calc(((100% - (4 * 120px + 3 * 10px)) / 2) - 10px);
     margin-top: -10px;
-    z-index: -2;
+    z-index: -1;
     height: calc(((4 * 120px + 3 * 10px) + 20px));
     width: calc(((4 * 120px + 3 * 10px) + 20px));
     background-color: white;
