--- a/styles/position.css
+++ b/styles/position.css
@@ -26,7 +26,7 @@
 }
 
 #carlos {
-    z-index: -4;
+    z-index: -3;
     transform: rotateY(180deg);
     left: 20%;
     bottom: 5%;
